--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -18,7 +18,6 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
-    "mysql": "^2.18.1"
+    "mongoose": "^8.4.1"
   }
 }
