--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "twilio": "^5.2.0"
   }
 }
